include/wtf.h

typedef struct wtf_server wtf_server_t;
typedef struct wtf_session wtf_session_t;
typedef struct wtf_stream wtf_stream_t;
//! Result codes for all WebTransport operations
typedef enum {
    WTF_SUCCESS = 0,
    WTF_ERROR_INVALID_PARAMETER,
    WTF_ERROR_OUT_OF_MEMORY,
    WTF_ERROR_INTERNAL,
    WTF_ERROR_CONNECTION_ABORTED,
    WTF_ERROR_STREAM_ABORTED,
    WTF_ERROR_INVALID_STATE,
    WTF_ERROR_BUFFER_TOO_SMALL,
    WTF_ERROR_NOT_FOUND,
    WTF_ERROR_REJECTED,
    WTF_ERROR_TIMEOUT,
    WTF_ERROR_TLS_HANDSHAKE_FAILED,
    WTF_ERROR_PROTOCOL_VIOLATION,
    WTF_ERROR_FLOW_CONTROL
} wtf_result_t;
//! Session lifecycle states
typedef enum {
    WTF_SESSION_HANDSHAKING,  //! Initial connection handshake
    WTF_SESSION_CONNECTED,    //! Session is active and ready
    WTF_SESSION_DRAINING,     //! Session is draining before close
    WTF_SESSION_CLOSED        //! Session has been closed
} wtf_session_state_t;
//! Stream direction types
typedef enum {
    WTF_STREAM_BIDIRECTIONAL = 0,  //! Data can flow in both directions
    WTF_STREAM_UNIDIRECTIONAL = 1  //! Data flows in one direction only
} wtf_stream_type_t;
// #endregion

// #region Data Structures

//! Data buffer for network operations
typedef struct {
    uint32_t length;  //! Size of data in bytes
    uint8_t* data;    //! Pointer to buffer data
} wtf_buffer_t;
//! Destroy the server and free resources
//! @param server server instance to destroy
WTF_API void wtf_server_destroy(wtf_server_t* server);
// #endregion

// #region Session Management API

//! Close a session with optional error code and reason
//! @param session session to close
//! @param error_code application error code
//! @param reason human-readable reason for closure
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_session_close(wtf_session_t* session, uint32_t error_code,
                                       const char* reason);
//! Drain a session - sends DRAIN_WEBTRANSPORT_SESSION capsule
//! @param session session to drain
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_session_drain(wtf_session_t* session);
//! Send a datagram on a session
//! @param session target session
//! @param buffers array of buffers containing datagram data
//! @param buffer_count number of buffers in array
//! @return WTF_SUCCESS on success, error code on failure
//!
//! @note Memory ownership:
//! - The buffers array is always owned by the caller.
//! - On SUCCESS: The caller retains ownership of buffer data (buffers[i].data).
//!   The library will emit a WTF_SESSION_EVENT_DATAGRAM_SEND_STATE_CHANGE event
//!   when the send state changes. The application must free the buffer data when
//!   the state reaches a final state (use WTF_DATAGRAM_SEND_STATE_IS_FINAL macro).
//! - On FAILURE: The caller retains ownership of all buffer data and must free it.
//!
//! @note Send state change handling:
//! - Applications MUST implement WTF_SESSION_EVENT_DATAGRAM_SEND_STATE_CHANGE handling
//!   in their session callback to free the sent buffer data on final states.
//! - If no session callback is set, the library will automatically free the
//!   buffer data as a fallback, but this is not recommended.
//!
//! @note The function creates an internal buffer array containing a protocol header
//! followed by references to the original data buffers. No data copying occurs.
WTF_API wtf_result_t wtf_session_send_datagram(wtf_session_t* session, const wtf_buffer_t* buffers,
                                               uint32_t buffer_count);
//! Open a new stream on a session
//! @param session parent session for the stream
//! @param type stream type (bidirectional or unidirectional)
//! @param stream pointer to receive the created stream
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_session_create_stream(wtf_session_t* session, wtf_stream_type_t type,
                                               wtf_stream_t** stream);
//! Get session state
//! @param session target session
//! @return current session state
WTF_API wtf_session_state_t wtf_session_get_state(wtf_session_t* session);
//! Get session peer address
//! @param session target session
//! @param address_buffer buffer to receive address data
//! @param buffer_size pointer to buffer size, updated with actual size
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_session_get_peer_address(wtf_session_t* session, void* address_buffer,
                                                  size_t* buffer_size);