java/src/com/structmap/webtransportfast/wtf_h.java


        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void wtf_server_destroy(wtf_server_t *server)
     * }
     */
    public static FunctionDescriptor wtf_server_destroy$descriptor() {
        return wtf_server_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void wtf_server_destroy(wtf_server_t *server)
     * }
     */
    public static MethodHandle wtf_server_destroy$handle() {
        return wtf_server_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void wtf_server_destroy(wtf_server_t *server)
     * }
     */
    public static MemorySegment wtf_server_destroy$address() {
        return wtf_server_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void wtf_server_destroy(wtf_server_t *server)
     * }
     */
    public static void wtf_server_destroy(MemorySegment server) {
        var mh$ = wtf_server_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_server_destroy", server);
            }
            mh$.invokeExact(server);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_session_close {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER,
            wtf_h.C_INT,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_session_close");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_session_close(wtf_session_t *session, uint32_t error_code, const char *reason)
     * }
     */
    public static FunctionDescriptor wtf_session_close$descriptor() {
        return wtf_session_close.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_session_close(wtf_session_t *session, uint32_t error_code, const char *reason)
     * }
     */
    public static MethodHandle wtf_session_close$handle() {
        return wtf_session_close.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_session_close(wtf_session_t *session, uint32_t error_code, const char *reason)
     * }
     */
    public static MemorySegment wtf_session_close$address() {
        return wtf_session_close.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_session_close(wtf_session_t *session, uint32_t error_code, const char *reason)
     * }
     */
    public static int wtf_session_close(MemorySegment session, int error_code, MemorySegment reason) {
        var mh$ = wtf_session_close.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_session_close", session, error_code, reason);
            }
            return (int)mh$.invokeExact(session, error_code, reason);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_session_drain {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_session_drain");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_session_drain(wtf_session_t *session)
     * }
     */
    public static FunctionDescriptor wtf_session_drain$descriptor() {
        return wtf_session_drain.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_session_drain(wtf_session_t *session)
     * }
     */
    public static MethodHandle wtf_session_drain$handle() {
        return wtf_session_drain.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_session_drain(wtf_session_t *session)
     * }
     */
    public static MemorySegment wtf_session_drain$address() {
        return wtf_session_drain.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_session_drain(wtf_session_t *session)
     * }
     */
    public static int wtf_session_drain(MemorySegment session) {
        var mh$ = wtf_session_drain.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_session_drain", session);
            }
            return (int)mh$.invokeExact(session);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_session_send_datagram {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER,
            wtf_h.C_POINTER,
            wtf_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_session_send_datagram");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_session_send_datagram(wtf_session_t *session, const wtf_buffer_t *buffers, uint32_t buffer_count)
     * }
     */
    public static FunctionDescriptor wtf_session_send_datagram$descriptor() {
        return wtf_session_send_datagram.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_session_send_datagram(wtf_session_t *session, const wtf_buffer_t *buffers, uint32_t buffer_count)
     * }
     */
    public static MethodHandle wtf_session_send_datagram$handle() {
        return wtf_session_send_datagram.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_session_send_datagram(wtf_session_t *session, const wtf_buffer_t *buffers, uint32_t buffer_count)
     * }
     */
    public static MemorySegment wtf_session_send_datagram$address() {
        return wtf_session_send_datagram.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_session_send_datagram(wtf_session_t *session, const wtf_buffer_t *buffers, uint32_t buffer_count)
     * }
     */
    public static int wtf_session_send_datagram(MemorySegment session, MemorySegment buffers, int buffer_count) {
        var mh$ = wtf_session_send_datagram.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_session_send_datagram", session, buffers, buffer_count);
            }
            return (int)mh$.invokeExact(session, buffers, buffer_count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_session_create_stream {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER,
            wtf_h.C_INT,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_session_create_stream");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_session_create_stream(wtf_session_t *session, wtf_stream_type_t type, wtf_stream_t **stream)
     * }
     */
    public static FunctionDescriptor wtf_session_create_stream$descriptor() {
        return wtf_session_create_stream.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_session_create_stream(wtf_session_t *session, wtf_stream_type_t type, wtf_stream_t **stream)
     * }
     */
    public static MethodHandle wtf_session_create_stream$handle() {
        return wtf_session_create_stream.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_session_create_stream(wtf_session_t *session, wtf_stream_type_t type, wtf_stream_t **stream)
     * }
     */
    public static MemorySegment wtf_session_create_stream$address() {
        return wtf_session_create_stream.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_session_create_stream(wtf_session_t *session, wtf_stream_type_t type, wtf_stream_t **stream)
     * }
     */
    public static int wtf_session_create_stream(MemorySegment session, int type, MemorySegment stream) {
        var mh$ = wtf_session_create_stream.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_session_create_stream", session, type, stream);
            }
            return (int)mh$.invokeExact(session, type, stream);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_session_get_state {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_session_get_state");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_session_state_t wtf_session_get_state(wtf_session_t *session)
     * }
     */
    public static FunctionDescriptor wtf_session_get_state$descriptor() {
        return wtf_session_get_state.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_session_state_t wtf_session_get_state(wtf_session_t *session)
     * }
     */
    public static MethodHandle wtf_session_get_state$handle() {
        return wtf_session_get_state.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_session_state_t wtf_session_get_state(wtf_session_t *session)
     * }
     */
    public static MemorySegment wtf_session_get_state$address() {
        return wtf_session_get_state.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_session_state_t wtf_session_get_state(wtf_session_t *session)
     * }
     */
    public static int wtf_session_get_state(MemorySegment session) {
        var mh$ = wtf_session_get_state.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_session_get_state", session);
            }
            return (int)mh$.invokeExact(session);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_session_get_peer_address {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER,
            wtf_h.C_POINTER,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_session_get_peer_address");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
